--- a/template.html
+++ b/template.html
@@ -51,8 +51,8 @@
   </main>
   <footer class="footer border-top py-3 mt-5">
     <div class="container-xl">
-      <div class="text-center">created by <a href=#
-          target="_blank">Ed</a></div>
+      <div class="text-center">created by <a href=https://github.com/EdZev/frontend-project-lvl3
+          target="_blank">EdZev</a></div>
     </div>
   </footer>
 </body>
